--- a/main.yml
+++ b/main.yml
@@ -5,8 +5,7 @@
   gather_facts: false   # Speeds up the execution
   
   pre_tasks:
-    -name: Copy and enable repo
-      template:
+    - template:
         src: open_three-tier-app.repo
         dest: /etc/yum.repo.d/open_three-tier-app.repo
         mode: 0644
