--- a/main.yml
+++ b/main.yml
@@ -7,7 +7,7 @@
   pre_tasks:
     - template:
         src: ./open_three-tier-app.repo
-        dest: /etc/yum.repo.d/open_three-tier-app.repo
+        dest: /etc/yum.repos.d/open_three-tier-app.repo
         mode: 0644
          
   roles:
